changed colors and added pictures to other pages

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Gatti Land</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body class="bg-dark">
+<body class="bg-dark text-warning">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -38,10 +38,10 @@
         </header>
         <main>
           <img src="img/IMG_7609.PNG" class="card-img-top" alt="...">
-          <p class="text-sm-end">End aligned text on viewports sized SM (small) or wider.</p>
+          <p class="text-center">Hello, I'm Rachel Gatti, an enthusiast of art and an avid traveler hailing from the charming state of Wisconsin. My passions have led me on incredible journeys across the globe. From the enchanting streets of Italy to the artistic allure of France, the bustling energy of New York, and the historical wonders of Greece, I've been fortunate to explore the beauty and creativity of different cultures. Join me on this journey as I share my experiences and perspectives through the lens of art and travel.</p>
     </main>
     <footer>
-        <p>&copy Khari</p>
+      <p class="text-center">&copy Khari</p>
       </footer>   
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script scr="app.js"></script>
