--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </div>
         </section>
     </main>
-    <footer>
-        <p>&copy Khari</p>
+    <footer class="text-warning">
+        <p class="text-center">&copy Khari</p>
     </footer>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script scr="app.js"></script>
