--- a/index.html
+++ b/index.html
@@ -37,32 +37,32 @@
         <section class="container">
             <div class="row">
                 <div class="col">
-                <div class="card" style="width: 18rem;">
+                <div class="card h-100" style="width: 18rem;">
             <img src="img/IMG_5507.jpeg" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Art</h5>
                 <p class="card-text">As an art teacher, it is only natural for her to possess a profound passion for the world of art. Kindly click the button below to explore a selection of her artistic creations.</p>
-                <a href="art.html" class="btn btn-primary">Check Out My Artwork</a>
+                <a href="art.html" class="btn btn-primary mt-auto">Check Out My Artwork</a>
             </div>
             </div>
           </div>
           <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card h-100" style="width: 18rem;">
             <img src="img/IMG_7607.PNG" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">Adventures</h5>
               <p class="card-text">Can't spell adventures without the letters A R T! She possesses a deep passion for travel and the exploration of various creative works. Kindly click on the link below to view the destinations our explorer has visited.</p>
-              <a href="adventures.html" class="btn btn-primary">Explore The World With Me</a>
+              <a href="adventures.html" class="btn btn-primary mt-auto">Explore The World With Me</a>
             </div>
         </div>
           </div>
           <div class="col">
-          <div class="card" style="width: 18rem;">
+          <div class="card h-100" style="width: 18rem;">
             <img src="img/IMG_7612.PNG" class="card-img-top" alt="...">
-            <div class="card-body">
+            <div class="card-body d-flex flex-column">
               <h5 class="card-title">About</h5>
               <p class="card-text">For further information or to get in touch with Rachel, please click the button below.</p>
-              <a href="about.html" class="btn btn-primary">Learn More About Me</a>
+              <a href="about.html" class="btn btn-primary mt-auto">Learn More About Me</a>
             </div>
           </div>
         </div>
