changed colors of pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Gatti Land</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body class="bg-dark">
+<body class="bg-light bgv-gradient">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -42,7 +42,7 @@
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Art</h5>
                 <p class="card-text">As an art teacher, it is only natural for her to possess a profound passion for the world of art. Kindly click the button below to explore a selection of her artistic creations.</p>
-                <a href="art.html" class="btn btn-primary mt-auto">Check Out My Artwork</a>
+                <a href="art.html" class="btn btn-primary mt-auto btn-warning">Check Out My Artwork</a>
             </div>
             </div>
           </div>
@@ -52,7 +52,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Adventures</h5>
               <p class="card-text">Can't spell adventures without the letters A R T! She possesses a deep passion for travel and the exploration of various creative works. Kindly click on the link below to view the destinations our explorer has visited.</p>
-              <a href="adventures.html" class="btn btn-primary mt-auto">Explore The World With Me</a>
+              <a href="adventures.html" class="btn btn-primary mt-auto btn-warning">Explore The World With Me</a>
             </div>
         </div>
           </div>
@@ -62,14 +62,14 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">About</h5>
               <p class="card-text">For further information or to get in touch with Rachel, please click the button below.</p>
-              <a href="about.html" class="btn btn-primary mt-auto">Learn More About Me</a>
+              <a href="about.html" class="btn btn-primary mt-auto btn-warning">Learn More About Me</a>
             </div>
           </div>
         </div>
     </div>
         </section>
     </main>
-    <footer class="text-warning">
+    <footer class="text-primary">
         <p class="text-center">&copy Khari</p>
     </footer>   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
