--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <title>Gatti Land</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body class="bg-dark text-warning">
+<body class="bg-light text-dark">
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -39,6 +39,19 @@
         <main>
           <img src="img/IMG_7609.PNG" class="card-img-top" alt="...">
           <p class="text-center">Hello, I'm Rachel Gatti, an enthusiast of art and an avid traveler hailing from the charming state of Wisconsin. My passions have led me on incredible journeys across the globe. From the enchanting streets of Italy to the artistic allure of France, the bustling energy of New York, and the historical wonders of Greece, I've been fortunate to explore the beauty and creativity of different cultures. Join me on this journey as I share my experiences and perspectives through the lens of art and travel.</p>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label"></label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Email Address">
+            <form class="row">
+              <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label"></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Comments"></textarea>
+              </div>
+                <div class="col-auto">
+                  <button type="submit" class="btn btn-primary mb-3">Send Message</button>
+              </div>
+          </div>
+        </form>
     </main>
     <footer>
       <p class="text-center">&copy Khari</p>
