--- a/adventures.html
+++ b/adventures.html
@@ -40,46 +40,40 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-          <img src="img/IMG_7596.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7596.PNG" class="d-block w-100" alt="Bryant Park, New York City">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7598.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7598.PNG" class="d-block w-100" alt="Chinatown, New York City">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7599.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7599.PNG" class="d-block w-100" alt="Times Square, New York City">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7600.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7600.PNG" class="d-block w-100" alt="Ischia, Italy">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7601.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7601.PNG" class="d-block w-100" alt="Ischia, Italy">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7603.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7603.PNG" class="d-block w-100" alt="Capri, Italy">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7604.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7604.PNG" class="d-block w-100" alt="Rome">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7605.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7605.PNG" class="d-block w-100" alt="Rome">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7607.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7607.PNG" class="d-block w-100" alt="Montpellier, France">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7608.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7608.PNG" class="d-block w-100" alt="Brooklyn Bridge">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7609.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7610.PNG" class="d-block w-100" alt="Taos, New Mexico">
         </div>
         <div class="carousel-item">
-          <img src="img/IMG_7610.PNG" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/IMG_7611.PNG" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/IMG_7612.PNG" class="d-block w-100" alt="...">
+          <img src="img/IMG_7611.PNG" class="d-block w-100" alt="Taos, New Mexico">
         </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
