added alt descriptions

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
           </nav>
         </header>
         <main>
-          <img src="img/IMG_7609.PNG" class="card-img-top" alt="...">
+          <img src="img/IMG_7609.PNG" class="card-img-top" alt="Picture of Rachel">
           <p class="text-center">Hello, I'm Rachel Gatti, an enthusiast of art and an avid traveler hailing from the charming state of Wisconsin. My passions have led me on incredible journeys across the globe. From the enchanting streets of Italy to the artistic allure of France, the bustling energy of New York, and the historical wonders of Greece, I've been fortunate to explore the beauty and creativity of different cultures. Join me on this journey as I share my experiences and perspectives through the lens of art and travel.</p>
           <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label"></label>
