--- a/art.html
+++ b/art.html
@@ -40,40 +40,40 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/IMG_3183.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_3183.jpeg" class="d-block w-100" alt="Sunset on beach"
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_3184.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_3184.jpeg" class="d-block w-100" alt="Hotel Beach Sunset">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_3187.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_3187.jpeg" class="d-block w-100" alt="chinese food painting">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_3188.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_3188.jpeg" class="d-block w-100" alt="abandoned building painting">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5507.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5507.jpeg" class="d-block w-100" alt="Collection of childhood paintings">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5508.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5508.jpeg" class="d-block w-100" alt="Painting of food">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5509.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5509.jpeg" class="d-block w-100" alt="lake painting">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5510.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5510.jpeg" class="d-block w-100" alt="Painting of interior of Mabel Tainter">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5511.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5511.jpeg" class="d-block w-100" alt="Painting of gourd">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5512.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5512.jpeg" class="d-block w-100" alt="neighborhood in the fall">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_5513.jpeg" class="d-block w-100" alt="...">
+            <img src="img/IMG_5513.jpeg" class="d-block w-100" alt="Prints of art supplies">
           </div>
           <div class="carousel-item">
-            <img src="img/IMG_6306.jpg" class="d-block w-100" alt="...">
+            <img src="img/IMG_6306.jpg" class="d-block w-100" alt="Collection of paintings">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
