--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="col">
                 <div class="card h-100" style="width: 18rem;">
-            <img src="img/IMG_5507.jpeg" class="card-img-top" alt="...">
+            <img src="img/IMG_5507.jpeg" class="card-img-top" alt="Picture of Oil Paintings">
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">Art</h5>
                 <p class="card-text">As an art teacher, it is only natural for her to possess a profound passion for the world of art. Kindly click the button below to explore a selection of her artistic creations.</p>
@@ -48,7 +48,7 @@
           </div>
           <div class="col">
           <div class="card h-100" style="width: 18rem;">
-            <img src="img/IMG_7607.PNG" class="card-img-top" alt="...">
+            <img src="img/IMG_7607.PNG" class="card-img-top" alt="Photo of France">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Adventures</h5>
               <p class="card-text">Can't spell adventures without the letters A R T! She possesses a deep passion for travel and the exploration of various creative works. Kindly click on the link below to view the destinations our explorer has visited.</p>
@@ -58,7 +58,7 @@
           </div>
           <div class="col">
           <div class="card h-100" style="width: 18rem;">
-            <img src="img/IMG_7612.PNG" class="card-img-top" alt="...">
+            <img src="img/IMG_7612.PNG" class="card-img-top" alt="Picture of Rachel">
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">About</h5>
               <p class="card-text">For further information or to get in touch with Rachel, please click the button below.</p>
