added new page and adjusted form

--- a/open-tour.html
+++ b/open-tour.html
@@ -40,27 +40,7 @@
           </nav>
         </header>
         <main>
-          <img src="img/IMG_7609.PNG" class="card-img-top" alt="Picture of Rachel">
-          <p class="text-center">Hello, I'm Rachel Gatti, an enthusiast of art and an avid traveler hailing from the charming state of Wisconsin. My passions have led me on incredible journeys across the globe. From the enchanting streets of Italy to the artistic allure of France, the bustling energy of New York, and the historical wonders of Greece, I've been fortunate to explore the beauty and creativity of different cultures. Join me on this journey as I share my experiences and perspectives through the lens of art and travel.</p>
-          <h3>Contact Me</h3>
-          <form onsubmit="handleSubmit(event)" class="row">
-            <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label"></label>
-              <input required type="text" class="form-control" id="exampleFormControlInput1" placeholder="Name" onkeypress="onlyLetters(event)">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlInput2" class="form-label"></label>
-              <input required type="email" class="form-control" id="exampleFormControlInput2" placeholder="Email Address">
-            </div>
-            <div class="mb-3">
-              <label for="exampleFormControlTextarea2" class="form-label"></label>
-              <textarea required class="form-control" id="exampleFormControlTextarea2" rows="3" placeholder="Comments"></textarea>
-            </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-primary mb-3">Send Message</button>
-              </div>
-          </div>
-        </form>
+            <h1 class="text-center">Open Tour Studio</h1>
     </main>
     <footer>
       <p class="text-center">&copy; Khari</p>
