--- a/open-tour.html
+++ b/open-tour.html
@@ -40,7 +40,11 @@
           </nav>
         </header>
         <main>
-            <h1 class="text-center">Open Tour Studio</h1>
+          <section class="text-center">
+            <h1>Open Tour Studio</h1>
+            <h4>October 15, 2024</h4>
+            <div id="countdown"></div>
+          </section>
     </main>
     <footer>
       <p class="text-center">&copy; Khari</p>
