fixed error of art page not loading

--- a/open-tour.html
+++ b/open-tour.html
@@ -45,6 +45,7 @@
             <h4>October 15, 2024</h4>
             <div id="countdown"></div>
           </section>
+          <img src="img/IMG_7510.jpeg" class="card-img-top" alt="Artist and her painting">
     </main>
     <footer>
       <p class="text-center">&copy; Khari</p>
