--- a/art.html
+++ b/art.html
@@ -43,7 +43,7 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="img/IMG_3183.jpeg" class="d-block w-100" alt="Sunset on beach"
+            <img src="img/IMG_3183.jpeg" class="d-block w-100" alt="Sunset on beach">
           </div>
           <div class="carousel-item">
             <img src="img/IMG_3184.jpeg" class="d-block w-100" alt="Hotel Beach Sunset">
