--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <a class="nav-link" href="adventures.html">Adventures</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
+                    <a class="nav-link" href="events.html">Events</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="open-tour.html">Meet The-Artist</a>
+                    <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
@@ -59,6 +59,16 @@
             </div>
         </div>
           </div>
+          <div class="col">
+            <div class="card h-100" style="width: 18rem;">
+              <img src="img/IMG_7510.jpeg" class="card-img-top" alt="Rachel and her painting">
+              <div class="card-body d-flex flex-column">
+                <h5 class="card-title">Events</h5>
+                <p class="card-text">I have a series of events on the horizon, and I encourage your attendance to ensure you do not overlook them. Your presence would be greatly appreciated, and these gatherings promise to offer valuable and enriching experiences.</p>
+                <a href="events.html" class="btn btn-primary mt-auto btn-warning">Check Out Upcoming Events</a>
+              </div>
+          </div>
+            </div>
           <div class="col">
           <div class="card h-100" style="width: 18rem;">
             <img src="img/IMG_7612.PNG" class="card-img-top" alt="Picture of Rachel">
