--- a/about.html
+++ b/about.html
@@ -26,10 +26,7 @@
                     <a class="nav-link" href="adventures.html">Adventures</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="open-tour.html">Meet The-Artist</a>
+                    <a class="nav-link" href="events.html">Events</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
