--- a/art.html
+++ b/art.html
@@ -20,16 +20,13 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="art.html">Art</a>
-                  </li>
-                  <li class="nav-item">
                     <a class="nav-link" href="adventures.html">Adventures</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about.html">About</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="open-tour.html">Meet The-Artist</a>
+                    <a class="nav-link" href="events.html">Events</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
