--- a/events.html
+++ b/events.html
@@ -52,7 +52,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Meet The Artist</h5>
               <p class="card-text">Hello, I'm Rachel, and I'm the artist behind the creations you see here. Art has always been my way of expressing the thoughts and emotions that words can't capture. I find inspiration in the beauty of nature, the chaos of urban life, and the intricacies of the human experience. Join me on this artistic journey as I explore various mediums and styles to bring my vision to life. Thank you for stopping by, and I hope my art resonates with you in some way. #MeetTheArtist 🎨✨</p>
-              <a href="adventures.html" class="btn btn-primary mt-auto btn-warning">Meet Me In Person</a>
+              <a href="#" class="btn btn-primary mt-auto btn-warning">Meet Me In Person</a>
             </div>
         </div>
           </div>
@@ -63,7 +63,7 @@
                 <h5 class="card-title">Paint with a Twist</h5>
                 <p class="card-text">
                   Unleash your inner artist while sipping on your favorite beverage at our "Drink and Paint" event! Join us for a creative evening of fun, where you can relax, socialize, and let your artistic side shine. No prior painting experience is necessary! Our expert instructor will guide you through the process, and your drink of choice will provide the perfect muse. Grab your friends and make memories on canvas as we combine art and enjoyment in a delightful blend of colors and cocktails. Cheers to creativity! 🍷🎨🖌️ #DrinkAndPaintNight</p>
-                <a href="events.html" class="btn btn-primary mt-auto btn-warning">Sign Up For Paint and Sip</a>
+                <a href="#" class="btn btn-primary mt-auto btn-warning">Sign Up For Paint and Sip</a>
               </div>
           </div>
             </div>
@@ -73,7 +73,7 @@
             <div class="card-body d-flex flex-column">
               <h5 class="card-title">Open Gallery</h5>
               <p class="card-text">Step into a world of artistic wonder at our Open Art Gallery! We are thrilled to showcase a diverse collection of contemporary and traditional art, each piece telling a unique story and inviting you to explore the depths of creativity. From vibrant paintings to intricate sculptures, our gallery is a haven for art enthusiasts and collectors alike. Join us in celebrating the power of imagination and the beauty of expression. Come, be inspired, and let these works of art speak to your soul. #ArtGallery #CreativeExpression 🎨🏛️✨</p>
-              <a href="about.html" class="btn btn-primary mt-auto btn-warning">Explore An Open Gallery</a>
+              <a href="open-tour.html" class="btn btn-primary mt-auto btn-warning">Explore An Open Gallery</a>
             </div>
           </div>
         </div>
