--- a/events.html
+++ b/events.html
@@ -38,10 +38,10 @@
           placeholder="Search"
           aria-label="Search"
         />
-        <ul class="dropdown-menu w-100 show">
-          <li><a class="dropdown-item" href="#">item 1</a></li>
-          <li><a class="dropdown-item" href="#">item 2</a></li>
-          <li><a class="dropdown-item" href="#">item 3</a></li>
+        <ul class="dropdown-menu w-100">
+          <li><a class="dropdown-item" href="#">Meet The Artist</a></li>
+          <li><a class="dropdown-item" href="#">Paint with a Twist</a></li>
+          <li><a class="dropdown-item" href="open-tour.html">Open Gallery</a></li>
         </ul>
     </header>
     <main>
